--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -18,11 +18,17 @@
                 </div>
                 <div class="card-content">
                     <div class="row">
-                        <div class="col s12 center-align">
+                        <div class="col s6 center-align">
                             <a href="/user/profile?id=<%= sess.userId %>" class="btn-floating btn-large waves-effect waves-light">
                                 <i class="material-icons">person</i>
                             </a>
                             <h5>View</h5>
+                        </div>
+                        <div class="col s6 center-align">
+                            <a href="/user/password" class="btn-floating btn-large waves-effect waves-light grey">
+                                <i class="material-icons">edit</i>
+                            </a>
+                            <h5>Edit</h5>
                         </div>
                     </div>
                 </div>
