Added Mailing, Print Feature

--- a/views/goal/all-subordinate-goals.ejs
+++ b/views/goal/all-subordinate-goals.ejs
@@ -4,9 +4,11 @@
 <body class="bg">
 <br><br>
 <main>
-
     <div class="container-fluid">
         <h4 class="center-align"> ALL SUBORDINATES </h4>
+        <div class="right-align" style="margin-right: 5%;">
+            <a href="/goal/print" class="btn dw-green-1 right-aligned" target="_blank"> Printable </a>
+        </div>
         <div class="row">
             <div class="col l12">
                 <%  i = 1
