--- a/views/goal/create.ejs
+++ b/views/goal/create.ejs
@@ -23,7 +23,7 @@
                         <div id="create">
                             <div class="row">
 
-                                <form class="col s12" action="save" method="POST" autocomplete="off" onsubmit="return validateGoals();">
+                                <form class="col s12" action="/goal/save" method="POST" autocomplete="off" onsubmit="return validateGoals();">
                                     <div class="row">
 
                                         <div class="input-field col l12 m12 s12">
