--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -67,7 +67,7 @@
                                     <div class="row">
                                         <div class="input-field col l6 m6 s12">
                                             <select id="manager" name="manager" class="icons">
-                                                <option data-icon="../images/user.png" class="left circle" selected> None </option>
+                                                <option data-icon="../../images/user.png" class="left circle" selected> None </option>
                                                 <% users.forEach(function(manager){
                                                     if((user.email!==manager.email)&&manager.RoleId!==1){
                                                 %>
