--- a/views/user/password.ejs
+++ b/views/user/password.ejs
@@ -18,7 +18,7 @@
                     </div>
                     <div class="card-content">
                         <div class="row">
-                            <form class="col s12" action="/updatePassword" method="POST" autocomplete="off">
+                            <form class="col s12" action="/user/updatePassword" method="POST" autocomplete="off">
                                 <div class="row">
                                     <input type="hidden" value="<%= user.id %>" name="id" id="id"/>
                                     <div class="input-field col l12 m12 s12">
@@ -30,7 +30,7 @@
 
                                     <div class="input-field col l12 m12 s12">
                                         <i class="material-icons prefix">lock</i>
-                                        <input id="newPassword" name="newPassword" type="password" class="validate" required>
+                                        <input id="newPassword" name="newPassword" type="password" class="validate" onchange="confirmPassword();" required>
                                         <label for="newPassword">New Password</label>
                                     </div>
 
@@ -40,8 +40,8 @@
                                         <label for="rePassword">Re-Password</label>
                                         <span id="resultRe"></span>
                                     </div>
-                                    <div class="input-field col s12 center" id="updatePasswordBtn">
-                                        <button id='submit' type='submit' class='dw-blue-1 btn waves-effect' disabled>
+                                    <div class="input-field col s12 center">
+                                        <button id='updatePasswordBtn' type='submit' class='dw-blue-1 btn waves-effect' disabled>
                                             Update Password
                                         </button>
                                     </div>
@@ -51,6 +51,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
 </main>
 </body>
