--- a/views/user/subordinates.ejs
+++ b/views/user/subordinates.ejs
@@ -6,7 +6,7 @@
         <br><br>
         <div class="row">
             <div class="col l4">
-                <a href="/goal/all-subordinate-goals" class="btn dw-green-1"> View All Subordinate Goals </a>
+                <a href="/goal/allSubordinates" class="btn dw-green-1"> View All Subordinates' Goals </a>
             </div>
         </div>
         <div class="row">
@@ -25,7 +25,7 @@
                     <div class="card-content">
                         <div class="row">
                             <div class="col s12 center-align">
-                                <a href="/goal/sub-list?id=<%= subordinate.id %>" class="btn-floating btn-large waves-effect waves-light">
+                                <a href="/goal/subordinate/<%= subordinate.id %>" class="btn-floating btn-large waves-effect waves-light">
                                     <i class="material-icons">menu</i>
                                 </a>
                                 <h5>View Goals</h5>
