--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -27,6 +27,7 @@
 
                                         <div class="input-field col s6">
                                             <i class="material-icons prefix">account_circle</i>
+                                            <input name="returnTo" type="hidden" value="<%= returnTo %>">
                                             <input id="email" type="text" name="email" class="validate">
                                         </div>
                                         <div class="input-field col s6">
