--- a/views/goal/sub-list.ejs
+++ b/views/goal/sub-list.ejs
@@ -96,16 +96,16 @@
                                         %>
                                         <tr class="transparent" style="border-bottom: 0px">
                                             <td> <%= i++ %> </td>
-                                            <td> <%= goal.goal %> </td>
+                                            <td> <a href="/goal/show/<%= goal.id %>"> <%= goal.goal %> </a> </td>
                                             <td> <%= goal.setDate %> </td>
                                             <td> <%= goal.deadline %></td>
                                             <td>
                                                 <% if (goal.goalStatus === "PENDING") {%>
-                                                <a href="action?g=<%= goal.id %>&q=APPROVED&u=<%= subordinate.id %>" class="btn btn-floating">
+                                                <a href="/goal/action?g=<%= goal.id %>&q=APPROVED&u=<%= subordinate.id %>" class="btn btn-floating">
                                                     <i class="material-icons dw-green-1 tooltipped"
                                                        data-position="top" data-tooltip="Approve">check</i>
                                                 </a>
-                                                <a href="action?g=<%= goal.id %>&q=REJECTED&u=<%= subordinate.id %>" class="btn btn-floating">
+                                                <a href="/goal/action?g=<%= goal.id %>&q=REJECTED&u=<%= subordinate.id %>" class="btn btn-floating">
                                                     <i class="material-icons red darken-1 tooltipped"
                                                        data-position="top" data-tooltip="Reject">clear</i>
                                                 </a>
@@ -146,7 +146,7 @@
                                                 <% if (goal.goalStatus === "REJECTED" || goal.goalStatus === "PENDING") { %>
                                                 N/A
                                                 <% } else {%>
-                                                <a href="/goal/view-log?id=<%= goal.id %>"
+                                                <a href="/goal/log/show/<%= goal.id %>"
                                                    class="btn btn-flat dw-green-1">
                                                     View Log
                                                 </a>
@@ -188,16 +188,16 @@
                                         %>
                                         <tr class="transparent" style="border-bottom: 0px">
                                             <td> <%= i++ %> </td>
-                                            <td> <%= goal.goal %> </td>
+                                            <td> <a href="/goal/show/<%= goal.id %>"> <%= goal.goal %> </a> </td>
                                             <td> <%= goal.setDate %> </td>
                                             <td> <%= goal.deadline %></td>
                                             <td>
                                                 <% if (goal.goalStatus === "PENDING") {%>
-                                                <a href="action?g=<%= goal.id %>&q=APPROVED&u=<%= subordinate.id %>" class="btn btn-floating">
+                                                <a href="goal/action?g=<%= goal.id %>&q=APPROVED&u=<%= subordinate.id %>" class="btn btn-floating">
                                                     <i class="material-icons dw-green-1 tooltipped"
                                                        data-position="top" data-tooltip="Approve">check</i>
                                                 </a>
-                                                <a href="action?g=<%= goal.id %>&q=REJECTED&u=<%= subordinate.id %>" class="btn btn-floating">
+                                                <a href=goal/"action?g=<%= goal.id %>&q=REJECTED&u=<%= subordinate.id %>" class="btn btn-floating">
                                                     <i class="material-icons red darken-1 tooltipped"
                                                        data-position="top" data-tooltip="Reject">clear</i>
                                                 </a>
@@ -238,7 +238,7 @@
                                                 <% if (goal.goalStatus === "REJECTED" || goal.goalStatus === "PENDING") { %>
                                                 N/A
                                                 <% } else {%>
-                                                <a href="/goal/view-log?id=<%= goal.id %>"
+                                                <a href="/goal/log/show/<%= goal.id %>"
                                                    class="btn btn-flat dw-green-1">
                                                     View Log
                                                 </a>
@@ -266,4 +266,14 @@
     </div>
 </main>
 </body>
+
+<script>
+    let message = '<%= message %>'
+    let messageType = '<%= messageType %>'
+    if(message===''||message===null||typeof message==='undefined'){
+
+    }else{
+        displayMessage(message, messageType, 4000)
+    }
+</script>
 <% include ../layouts/footer.ejs %>
