--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -2,24 +2,25 @@
 <html>
 <head>
     <title> <%= title %></title>
+    <base href = "http://localhost:3000/" />
     <link rel="icon"
           type="image/png"
-          href="../images/fav.png">
+          href="images/fav.png">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="../stylesheets/materialize.min.css"  media="screen,projection"/>
-    <link type="text/css" rel="stylesheet" href="../stylesheets/datatables.min.css"  media="screen,projection"/>
-    <link type="text/css" rel="stylesheet" href="../stylesheets/style.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="/stylesheets/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="/stylesheets/datatables.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="/stylesheets/style.css"  media="screen,projection"/>
 
 
     <!--Import jQuery before materialize.js-->
-    <script type="text/javascript" src="../javascripts/jquery-3.3.1.js"></script>
-    <script type="text/javascript" src="../javascripts/jquery.noty.packaged.min.js"></script>
-    <script type="text/javascript" src="../javascripts/jquery-ui.js"></script>
-    <script type="text/javascript" src="../javascripts/materialize.min.js"></script>
-    <script type="text/javascript" src="../javascripts/datatables.min.js"></script>
-    <script type="text/javascript" src="../javascripts/script.js"></script>
+    <script type="text/javascript" src="/javascripts/jquery-3.3.1.js"></script>
+    <script type="text/javascript" src="/javascripts/jquery.noty.packaged.min.js"></script>
+    <script type="text/javascript" src="/javascripts/jquery-ui.js"></script>
+    <script type="text/javascript" src="/javascripts/materialize.min.js"></script>
+    <script type="text/javascript" src="/javascripts/datatables.min.js"></script>
+    <script type="text/javascript" src="/javascripts/script.js"></script>
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
