--- a/views/user/create.ejs
+++ b/views/user/create.ejs
@@ -23,7 +23,7 @@
                         <div id="create">
                             <div class="row">
 
-                                <form class="col s12" action="save" method="POST" autocomplete="off" onsubmit="return validateUser();">
+                                <form class="col s12" action="/user/save" method="POST" autocomplete="off" onsubmit="return validateUser();">
                                     <div class="row">
 
                                         <div class="input-field col l6 m6 s12">
