--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -12,7 +12,7 @@
         <div class="row">
             <% if (manager) { %>
             <h6>Manager
-            <img src="../profilePictures/<%=manager.imageName%>" onerror="this.src='../profilePictures/default.jpg'" style="height: 4%; width: 4%; margin-bottom: -1%;"
+            <img src="../../profilePictures/<%=manager.imageName%>" onerror="this.src='../../profilePictures/default.jpg'" style="height: 4%; width: 4%; margin-bottom: -1%;"
                               class="tooltipped" data-position="right" data-tooltip="<%= manager.name %>">
             <% }%>
             </h6>
@@ -22,7 +22,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col l4 s6 m4 offset-l4 offset-s3 offset-m4">
-                        <a><img src="../profilePictures/<%=user.imageName%>" onerror="this.src='../profilePictures/default.jpg'" class="circle responsive-img" id="profileImage"></a>
+                        <a><img src="../../profilePictures/<%=user.imageName%>" onerror="this.src='../../profilePictures/default.jpg'" class="circle responsive-img" id="profileImage"></a>
                             <div class="overlay">
                                 <a href="./profilePicture" class="icon">
                                     <i class="material-icons circle grey small white-text tooltipped"
@@ -40,7 +40,7 @@
             <% if (subordinates[0]) { %>
             <h6> Subordinates
                 <% for(var i=0; i < subordinates.length; i++){ %>
-                <img src="../profilePictures/<%=subordinates[i].imageName%>" onerror="this.src='../profilePictures/default.jpg'" style="height: 4%; width: 4%; margin-bottom: -1%;" class="tooltipped" data-position="right" data-tooltip="<%=subordinates[i].name %>">
+                <img src="../../profilePictures/<%=subordinates[i].imageName%>" onerror="this.src='../../profilePictures/default.jpg'" style="height: 4%; width: 4%; margin-bottom: -1%;" class="tooltipped" data-position="right" data-tooltip="<%=subordinates[i].name %>">
                 <% }
             }%>
             </h6>
